# mdlinker

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  DEBUGGING.md  Justfile  LICENSE  Readme.md  clippy.toml  mdlinker.toml  rust-toolchain.toml
.github/workflows/: rust.yml  rustdoc.yml
src/: config.rs  error.rs  file.rs  lib.rs  main.rs  ngrams.rs  rules.rs  sed.rs  visitor.rs
src/config/: cli.rs  default.rs  file.rs
src/file/: content.rs  name.rs  treesitter.rs
src/file/content/: front_matter.rs  frontmatter.rs  wikilink.rs
src/file/content/front_matter/: logseq.rs  yaml.rs
src/file/content/frontmatter/: logseq.rs  yaml.rs
src/file/treesitter/assets/: logseq.scm
src/rules/: broken_wikilink.rs  duplicate_alias.rs  similar_filename.rs  unlinked_text.rs
tests/: common.rs  integration_tests.rs  logseq.rs  obsidian.rs
tests/logseq/: broken_wikilink.rs  common.rs  duplicate_alias.rs  main.rs  similar_filename.rs  similar_filenames.rs  unlinked_text.rs
tests/logseq/broken_wikilink/: tests.rs
tests/logseq/broken_wikilink/assets/journals/: 2024_11_01.md
tests/logseq/broken_wikilink/assets/pages/: foo.md  lorem.rs  sit.rs
tests/logseq/broken_wikilink/journals/: 2024_11_01.md
tests/logseq/broken_wikilink/pages/: foo.md
tests/logseq/duplicate_alias/: tests.rs
tests/logseq/duplicate_alias/assets/pages/: foo.md  ipsum.md  lorem.md
tests/logseq/duplicate_alias/pages/: lorem.md
tests/logseq/similar_filename/: tests.rs
tests/logseq/similar_filenames/: logseq.rs
tests/logseq/unlinked_text/: tests.rs
tests/logseq/unlinked_text/assets/journals/: 2024_08_10.md  2024_11_01.md
tests/logseq/unlinked_text/assets/pages/: foo.md
tests/logseq/unlinked_text/journals/: 2024_08_10.md
tests/logseq/unlinked_text/pages/: lorem.md
tests/obsidian/: path_wikilink.rs  pipe_wikilink.rs
tests/obsidian/path_wikilink/foo/bar/: bar.md
tests/obsidian/pipe_wikilink/: bar.md  foo.md
