[package]
name = "mdlinker"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.8"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
rayon = "1.10.0"
regex = "1.10.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
toml = "0.8.19"
walkdir = "2.5.0"

[dev-dependencies]
iai-callgrind = "0.14.0"

[[bench]]
name    = "bench_main"
harness = false

[profile.bench]
debug = true
